tests/snapshots/serde__de_bigint64array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new BigInt64Array(new ArrayBuffer(16, { maxByteLength: 24 })); a.set([1n, -2n]); a"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            254,
            255,
            255,
            255,
            255,
            255,
            255,
            255,
        ],
        max_byte_length: Some(
            24,
        ),
    },
    1: ArrayBufferView {
        kind: BigInt64Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: true,
        is_backed_by_rab: true,
    },
}

