tests/snapshots/serde__de_bigint_neg.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n-1n"
---
=== VALUE ===
BigInt(-1)

=== HEAP ===
Heap {}

