tests/snapshots/serde__de_bigint_primitive_u64_max.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nObject(18446744073709551615n)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BigIntObject(
        18446744073709551615,
    ),
}

