tests/snapshots/serde__de_bigint_primitive_zero.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nObject(0n)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BigIntObject(
        0,
    ),
}

