tests/snapshots/serde__de_bigint_u128_max.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n340282366920938463463374607431768211455n"
---
=== VALUE ===
BigInt(340282366920938463463374607431768211455)

=== HEAP ===
Heap {}

